--- a/package.json
+++ b/package.json
@@ -33,13 +33,18 @@
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
+    "liquor-tree": "^0.2.65",
     "prettier": "^1.18.2",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "typescript": "^3.4.3",
+    "ua-parser-js": "^0.7.20",
     "vue-cli-plugin-electron-builder": "^1.4.0",
     "vue-cli-plugin-vuetify": "^0.6.3",
+    "vue-i18n": "^8.14.1",
     "vue-template-compiler": "^2.6.10",
+    "vue-virtual-scroller": "^1.0.0-rc.2",
+    "vuedraggable": "^2.23.1",
     "vuetify-loader": "^1.2.2"
   }
 }
