--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "prettier": "^1.18.2",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
+    "splitpanes": "^1.14.5",
     "typescript": "^3.4.3",
     "ua-parser-js": "^0.7.20",
     "vue-cli-plugin-electron-builder": "^1.4.0",
