--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.141",
+    "@types/nedb": "^1.8.9",
     "@types/splitpanes": "^1.0.0",
     "@types/ua-parser-js": "^0.7.33",
     "@vue/cli-plugin-babel": "^3.11.0",
@@ -39,6 +40,7 @@
     "liquor-tree": "^0.2.65",
     "lodash": "^4.17.15",
     "material-design-icons-iconfont": "^5.0.1",
+    "nedb": "^1.8.0",
     "prettier": "^1.18.2",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
