--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "babel-eslint": "^10.0.1",
     "color": "^3.1.2",
     "electron": "^5.0.0",
+    "electron-context-menu": "^0.15.0",
     "eslint": "^5.16.0",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-vue": "^5.0.0",
