--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "moment": "^2.24.0",
     "nedb": "^1.8.0",
     "prettier": "^1.18.2",
+    "raw-loader": "^3.1.0",
     "sass": "^1.18.0",
     "sass-loader": "^7.1.0",
     "splitpanes": "^1.14.5",
